--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.workout_log">
+    package="com.hubertgredzinski.workout_log">
    <application
         android:label="workout_log"
         android:name="${applicationName}"
