--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = workout_log
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.workoutLog
+PRODUCT_BUNDLE_IDENTIFIER = com.hubertgredzinski.workoutLog
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2023 com.hubertgredzinski. All rights reserved.
