--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   intl: ^0.17.0
   get_it: ^7.2.0
   injectable: ^2.1.0
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
