--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   get_it: ^7.2.0
   injectable: ^2.1.0
   google_fonts: ^3.0.1
+  flutter_bloc: ^8.1.2
 
 dev_dependencies:
   flutter_test:
