--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   injectable: ^2.1.0
   google_fonts: ^3.0.1
   flutter_bloc: ^8.1.2
+  bloc: ^8.1.1
+  meta: ^1.8.0
 
 dev_dependencies:
   flutter_test:
