--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_bloc: ^8.1.2
   bloc: ^8.1.1
   meta: ^1.8.0
+  freezed_annotation: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +61,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   injectable_generator: ^2.1.3
   build_runner: ^2.3.3
+  freezed: ^2.3.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
