--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   meta: ^1.8.0
   dio: ^5.1.1
   json_annotation: ^4.8.0
+  freezed_annotation: ^2.2.0
 
 
 dev_dependencies:
@@ -64,6 +65,7 @@ dev_dependencies:
   injectable_generator: ^2.1.3
   build_runner: ^2.3.3
   json_serializable: ^6.6.1
+  freezed: ^2.3.2
 
 
 
