--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   dio: ^5.1.1
   json_annotation: ^4.8.0
   freezed_annotation: ^2.2.0
+  retrofit: ^4.0.1
 
 
 dev_dependencies:
@@ -66,6 +67,9 @@ dev_dependencies:
   build_runner: ^2.3.3
   json_serializable: ^6.6.1
   freezed: ^2.3.2
+  mocktail: ^0.3.0
+  retrofit_generator: ^6.0.0+3
+  bloc_test: ^9.1.1
 
 
 
