--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,14 @@ dev_dependencies:
   mocktail: ^0.3.0
   retrofit_generator: ^6.0.0+3
   bloc_test: ^9.1.1
+  flutter_launcher_icons: ^0.13.1
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/dumbbell.png"
+  min_sdk_android: 21
+  
 
 
 # For information on the generic Dart part of this file, see the
