--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,7 +68,7 @@ dev_dependencies:
   json_serializable: ^6.6.1
   freezed: ^2.3.2
   mocktail: ^0.3.0
-  retrofit_generator: ^6.0.0+3
+  retrofit_generator: ^7.0.0
   bloc_test: ^9.1.1
   flutter_launcher_icons: ^0.13.1
 
