--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   json_annotation: ^4.8.0
   freezed_annotation: ^2.2.0
   retrofit: ^4.0.1
+  custom_date_range_picker: ^1.0.10
 
 
 dev_dependencies:
