--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -59,8 +59,8 @@ android {
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
         minSdkVersion 23
         targetSdkVersion 33
-        versionCode 7
-        versionName "Add new logic to weather ui"
+        versionCode 9
+        versionName "Change ui appearance"
     }
 
  signingConfigs {
